--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width">
-  <!--link rel="icon" type="image/png" href="img/favicon-dwh-2.png"-->
+  <link rel="icon" type="image/png" href="img/icon-xk.png">
   <link href='css/main-style.css' rel='stylesheet' type='text/css'/>
 </head>
 <body>
