--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <p class="corse">Беседка Ротонда Высокие Горы</p>
   <div class="pr-1">
     <img style="" src="img/visokie-gori-01.jpg" alt="Высокие Горы">
-    <img style="" src="img/visokie-gori-02.jpg" alt="Высокие Горы">
+    <img style="" src="img/visokie-gori-02.JPG" alt="Высокие Горы">
   </div>
   <p>Задание: с помощью выданного учебного пособия и материалов собранных самостоятельно, создать комопзиционный черчеж. Работу нужно было выполнить в туши и чертить рейсфедером и изографами.</p>
   <p class="corse">Проект "ТРИ МАКЕТА"</p>
