--- a/index.html
+++ b/index.html
@@ -14,21 +14,106 @@
   <p class="under-date">2020-2022г.</p>
   <p class="corse">Первый курс</p>
   <p class="corse">Беседка Ротонда Высокие Горы</p>
+  <p>Задание: с помощью выданного учебного пособия и материалов собранных самостоятельно, создать комопзиционный черчеж. Работу нужно было выполнить в туши и чертить рейсфедером и изографами.</p>
   <div class="pr-1">
     <img style="" src="img/visokie-gori-01.jpg" alt="Высокие Горы">
     <img style="" src="img/visokie-gori-02.JPG" alt="Высокие Горы">
   </div>
-  <p>Задание: с помощью выданного учебного пособия и материалов собранных самостоятельно, создать комопзиционный черчеж. Работу нужно было выполнить в туши и чертить рейсфедером и изографами.</p>
   <p class="corse">Проект "ТРИ МАКЕТА"</p>
+  <p>Задание: скомпоновать простые прямоугольные фигуры разного размера в три пространственные композиции.</p>
   <div class="pr-2">
     <img style="" src="img/three-models-02.jpg" alt="Три Макета">
     <img style="" src="img/three-models-01.png" alt="Три Макета">
   </div>
-  <p>Задание: с помощью выданного учебного пособия и материалов собранных самостоятельно, создать комопзиционный черчеж. Работу нужно было выполнить в туши и чертить рейсфедером и изографами.</p>
+  <p class="corse">Проект "ПЕШЕХОДНЫЙ МОСТ"</p>
+  <p>Задача заключалась в проектировании пешеходного моста с пролетом 15 метров и перепадом высот в 5 метров. Главной сложностью этого проекта было соблюбение “Строительных норм и правил” (СНИП).</p>
+  <p>Работы была разбита на несколько этапов:</p>
+  <ul>
+    <li>Клаузура</li>
+    <li>Проработка деталей</li>
+    <li>Готовый лист проекта</li>
+    <li>Макет</li>
+  </ul>
   <div class="pr-3">
     <img style="" src="img/bridge-01.jpg" alt="Пешеходный мост">
+    <img style="" src="img/bridge-02.jpg" alt="Пешеходный мост">
   </div>
-  <p>Задание: с помощью выданного учебного пособия и материалов собранных самостоятельно, создать комопзиционный черчеж. Работу нужно было выполнить в туши и чертить рейсфедером и изографами.</p>
+  <div>
+    <img style="height: 600px;" src="img/bridge-07.jpg" alt="Пешеходный мост">
+    <img style="height: 600px;" src="img/bridge-04.jpg" alt="Пешеходный мост">
+    <img style="height: 600px;" src="img/bridge-05.jpg" alt="Пешеходный мост">
+  </div>
+  <div>
+    <img class="bridge-1" style="" src="img/bridge-03.jpg" alt="Пешеходный мост">
+  </div>
+  <p class="corse" style="margin-bottom: 20px; margin-top: 40px;">Макет “КОМОПЗИЦИОННОЕ РАСПОЛОЖЕНИЕ ФИГУР В ПРОСТРАНСТВЕ”</p>
+  <div>
+    <img class="" style="" src="img/model-01.jpg" alt="Макет">
+  </div>
+  <div>
+    <img class="" style="" src="img/model-02.jpg" alt="Макет">
+  </div>
+  <div style="display: inline-block;">
+    <img class="" style="height: 600px;" src="img/model-04.jpg" alt="Макет">
+  <div style="display: inline-block;">
+  <div>
+    <img class="" style="height: 295px;" src="img/model-03.jpg" alt="Макет">
+  </div>
+  <div>
+    <img class="" style="height: 295px;" src="img/model-05.jpg" alt="Макет">
+  </div>
+  </div>
+  </div>
+  <p class="corse">Отмывка “Парфенон”, А1</p>
+  <div>
+    <img class="" style="width: 700px;" src="img/parfenon.jpg" alt="Парфенон">
+  </div>
+  <p class="corse">Презентация проекта другого архитектора</p>
+  <div>
+    <img class="" style="width: 700px; padding: 0px; border: 1px solid silver; margin: 5px;" src="img/vangelis-house.jpg" alt="Парфенон">
+  </div>
+  <p class="corse">Макет “БОЛЬШАЯ И МАЛАЯ ФОРМА”</p>
+  <div>
+    <img class="" style="width: 700px;" src="img/model-06.jpg" alt="Макет">
+  </div>
+  <div>
+    <img class="" style="width: 700px;" src="img/model-07.jpg" alt="Макет">
+  </div>
+  <p class="corse">Проект “ГОСТЕВОЙ ДОМИК ЕГЕРЯ”</p>
+  <p>Задача заключалась в проектировании одноэтажного жилого дома, который предназначен для временного проживания небольшой группы охотников или рыболовов (до 4 человек).
+</p><p>В прихожей требовалось оборудовать шкаф для хранения верхней одежды. При доме необходимо было спроектировать террасу или холодную веранду. Так же была возможность добавить обзорную вышку. Местность выбиралась самостоятельно.
+</p><p>Проект навеян работами архитектора 
+Frank Lloyd Wright.</p>
+  <div>
+    <img class="" style="width: 700px; padding: 0px; border: 1px solid silver; margin: 5px;" src="img/eger-house.jpg" alt="Макет">
+  </div>
+  <p class="corse">Второй курс</p>
+  <p class="corse">Проект “ИНДИВИДУАЛЬНЫЙ ЖИЛОЙ ДОМ”</p>
+  <p>Задание: спроектировать дом 
+для одной семьи. Обязательные требования:
+2 этажа, подвал, 2 санузла, балкон или терраса, соответствие СНИП
+</p><p>Работа создана по мотивам шотландских замков 16-18 в.</p>
+  <div>
+    <img class="" style="width: 700px; padding: 0px; border: 1px solid silver; margin: 5px;" src="img/glen.jpg" alt="Индивидуальный жилой дом">
+  </div>
+  <p class="corse">Проект “КЛУБ НА 300 ПОСЕТИТЕЛЕЙ С ЗАЛОМ”</p>
+  <p>Задача: спроектировать клуб на 300 человек, с залом, комнатами отдыха, вестибюлем, гостевыми номерами и рестроаном.
+</p><p>Проект вдохновлен архитетурой Чикаго и английским Reform Club в Лондоне.</p>
+  <div>
+    <img class="" style="width: 700px; padding: 0px; border: 1px solid silver; margin: 5px;" src="img/club-05.jpg" alt="Индивидуальный жилой дом">
+  </div>
+  <div>
+    <img class="" style="width: 700px; padding: 0px; border: 1px solid silver; margin: 5px;" src="img/club-01.jpg" alt="Индивидуальный жилой дом">
+  </div>
+  <div>
+    <img class="" style="width: 700px; padding: 0px; border: 1px solid silver; margin: 5px;" src="img/club-03.jpg" alt="Индивидуальный жилой дом">
+  </div>
+  <div>
+    <img class="" style="width: 700px; padding: 0px; border: 1px solid silver; margin: 5px;" src="img/club-02.jpg" alt="Индивидуальный жилой дом">
+  </div>
+  <div>
+    <img class="" style="width: 700px; padding: 0px; border: 1px solid silver; margin: 5px;" src="img/club-04.jpg" alt="Индивидуальный жилой дом">
+  </div>
 </div>
 </body>
 </html>
