--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
   </div>
   <p class="corse" style="margin-bottom: 20px; margin-top: 40px;">Макет “КОМОПЗИЦИОННОЕ РАСПОЛОЖЕНИЕ ФИГУР В ПРОСТРАНСТВЕ”</p>
   <div>
-    <img class="" style="" src="img/model-01.jpg" alt="Макет">
+    <img class="model-01" style="" src="img/model-01.jpg" alt="Макет">
   </div>
   <div>
-    <img class="" style="" src="img/model-02.jpg" alt="Макет">
+    <img class="model-01" style="" src="img/model-02.jpg" alt="Макет">
   </div>
   <div style="display: inline-block;">
     <img class="" style="height: 600px;" src="img/model-04.jpg" alt="Макет">
@@ -114,6 +114,204 @@ Frank Lloyd Wright.</p>
   <div>
     <img class="" style="width: 700px; padding: 0px; border: 1px solid silver; margin: 5px;" src="img/club-04.jpg" alt="Индивидуальный жилой дом">
   </div>
+  <div style="border-bottom: 1px solid silver; padding-bottom: 20px; margin-top: 40px; margin-bottom: 20px;">
+    <h3 style="margin-top: 30px;">Рисунок, живопись, композиция</h3>
+    <p class="under-date">2020-2023г.</p>
+  </div>
+  <div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/venera.jpg" alt="Венера">
+      <p>Венера, карандаш А3</p>
+    </div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/laokoon.jpg" alt="Лаокоон">
+      <p>Лаокоон, карандаш А3</p>
+    </div>
+  </div>
+  <div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/apocsiomen.jpg" alt="Венера">
+      <p>Апоксиомен, карандаш А3</p>
+    </div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/antinoy.jpg" alt="Лаокоон">
+      <p>Антиной, карандаш А3</p>
+    </div>
+  </div>
+  <div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/diadumen.jpg" alt="Венера">
+      <p>Диадумен, карандаш А3</p>
+    </div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/athina.jpg" alt="Лаокоон">
+      <p>Афродита Книдская, карандаш А3</p>
+    </div>
+  </div>
+  <div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/socratus.jpg" alt="Венера">
+      <p>Сокрвт, какрандаш А3</p>
+    </div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/nikollo.jpg" alt="Лаокоон">
+      <p>Николло да Удзано, карандаш А3</p>
+    </div>
+  </div>
+  <div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/cesar.jpg" alt="Венера">
+      <p>Цезарь, карндаш А3</p>
+    </div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/seneka.jpg" alt="Лаокоон">
+      <p>Сенека, карандаш А3</p>
+    </div>
+  </div>
+  <div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/composition-01.jpg" alt="Венера">
+      <p>Композиция, карндаш А3</p>
+    </div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/composition-02.jpg" alt="Лаокоон">
+      <p>Композиция, карандаш А3</p>
+    </div>
+  </div>
+  <div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/composition-03.jpg" alt="Венера">
+      <p>Композиция, карандаш А3</p>
+    </div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/man-wth-cane.jpg" alt="Лаокоон">
+      <p>Человек с посохом, карандаш А3</p>
+    </div>
+  </div>
+  <div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/dorifor.jpg" alt="Венера">
+      <p>Дорифор, карандаш А2</p>
+    </div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/portret-01.jpg" alt="Лаокоон">
+      <p>Портрет, карандаш А2</p>
+    </div>
+  </div>
+  <div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/moscow-sketches-01.jpg" alt="Венера">
+      <p>Летняя практика "Улицы Москвы", зарисовки</p>
+    </div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/moscow-sketches-02.jpg" alt="Лаокоон">
+      <p>Летняя практика "Улицы Москвы", карандаш А2</p>
+    </div>
+  </div>
+  <div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/moscow-sketches-03.jpg" alt="Венера">
+      <p style="max-width: 400px;">Летняя практика “Отлельно стоящее здание”Коломенское, Церковь Вознесения Господня, зарисовки</p>
+    </div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/moscow-sketches-04.jpg" alt="Лаокоон">
+      <p style="max-width: 400px;">Летняя практика “Отлельно стоящее здание”Коломенское, Церковь Вознесения Господня", карандаш А2</p>
+    </div>
+  </div>
+  <div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/still-life-06.jpg" alt="Венера">
+      <p>Композиция из фигур, карандаш А3</p>
+    </div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/composition-04.jpg" alt="Лаокоон">
+      <p>Свободная композиция, карандаш А2</p>
+    </div>
+  </div>
+  <div style="display: inline-block;">
+    <img class="" style="height: 800px;" src="img/villa-vera.jpg" alt="Венера">
+    <p style="max-width: 400px;">Задание на пространственное построение г. Сочи, Вилла Вера</p>
+  </div>
+  <div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/small-form.jpg" alt="Венера">
+      <p>Построение объекта с высоты птичьего полета, карандаш А2</p>
+    </div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/scull-and-head.jpg" alt="Лаокоон">
+      <p>Задание на понимание формы головы, карандаш А2</p>
+    </div>
+  </div>
+  <div style="display: inline-block;">
+    <img class="" style="height: 800px;" src="img/still-life-01.jpg" alt="Венера">
+    <p>Натюрморт, сепия, А3</p>
+  </div>
+  <div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/still-life-02.jpg" alt="Венера">
+      <p>Натюрморт, уголь, А2</p>
+    </div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/still-life-03.jpg" alt="Лаокоон">
+      <p>Натюрморт, уголь, зарисовка</p>
+    </div>
+  </div>
+  <div style="display: inline-block;">
+    <img class="" style="height: 600px;" src="img/nunut.jpg" alt="Венера">
+    <p>Зарисовка “Nunut”, А5</p>
+  </div>
+  <div style="display: inline-block;">
+    <img class="" style="height: 600px;" src="img/tbilisi-streets.jpg" alt="Венера">
+    <p>Зарисовка "Тбилиси", А5</p>
+  </div>
+  
+  <div style="display: inline-block;">
+    <img class="" style="height: 800px;" src="img/little-bread.jpg" alt="Венера">
+    <p>Натюрморт “Хлеб”, акварель, А4</p>
+  </div>
+  
+  <div style="display: inline-block;">
+    <img class="" style="height: 800px;" src="img/pears.jpg" alt="Венера">
+    <p>Натюрморт “Груши”, акварель, А4</p>
+  </div>
+  
+  <div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/coffee-pot.jpg" alt="Венера">
+      <p>Натюрмор “Кофейник”, А4</p>
+    </div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/matricarias.jpg" alt="Лаокоон">
+      <p>Натюрморт “Ромашки”, акварель, А3</p>
+    </div>
+  </div>
+  
+  <div style="display: inline-block;">
+    <img class="" style="height: 800px;" src="img/leros-lakki.jpg" alt="Лаокоон">
+    <p>Leros, “a sail in Lakki Bay”, акварель, A4</p>
+  </div>
+  
+  <div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/leros-castello.jpg" alt="Венера">
+      <p>Leros, Castello акварель, А4</p>
+    </div>
+    <div style="display: inline-block;">
+      <img class="" style="height: 800px;" src="img/leros-castello-small.jpg" alt="Лаокоон">
+      <p>Зарисовка, А5</p>
+    </div>
+  </div>
+  
+  <div style="display: inline-block;">
+    <img class="" style="height: 800px;" src="img/tea-party.jpg" alt="Лаокоон">
+    <p>Акварель, А4</p>
+  </div>
+  
+  <div style="display: inline-block;">
+    <img class="" style="height: 600px;" src="img/oranges-pealed.jpg" alt="Лаокоон">
+    <p>Акварель, А4</p>
+  </div>
+  
 </div>
 </body>
 </html>
