--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Frank Lloyd Wright.</p>
   <div>
     <div style="display: inline-block;">
       <img class="gr-1" style="" src="img/socratus.jpg" alt="Венера">
-      <p>Сокрвт, какрандаш А3</p>
+      <p>Сократ, какрандаш А3</p>
     </div>
     <div style="display: inline-block;">
       <img class="gr-1" style=";" src="img/nikollo.jpg" alt="Лаокоон">
